@@ -50,5 +50,3 @@ I will try to get a chance to troubleshoot it more to provide possibly more deta
 
 [[!meta author=yoh]]
 [[!tag projects/datalad]]
-
-[[!tag moreinfo]]
